# amund-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
amund/: CMakeLists.txt
amund/assets/shaders/: compile_shaders.bat  shader.frag  shader.vert
amund/include/amund/: shader.h
amund/src/: main.cpp
